--- a/catalog/templates/catalog/factory_dashboard.html
+++ b/catalog/templates/catalog/factory_dashboard.html
@@ -127,7 +127,7 @@
                             {% if product.images.all.0 %}
                             <img src="{{ product.images.all.0.image.url }}"
                                  alt="{{ product.name }}"
-                                 style="width: 50px; height: 50px; object-fit: cover;">
+                                 style="width: 50px; height: 50px; object-fit: contain; background-color: #f8f9fa;">
                             {% else %}
                             <div class="bg-light d-flex align-items-center justify-content-center"
                                  style="width: 50px; height: 50px;">
